@@ -3,21 +3,20 @@ package ca.bc.gov.app.service;
 import ca.bc.gov.app.dto.ClientPublicViewDto;
 import ca.bc.gov.app.dto.OrgBookTopicDto;
 import ca.bc.gov.app.dto.OrgBookTopicListResponse;
-import ca.bc.gov.app.entity.ClientDoingBusinessAsEntity;
 import ca.bc.gov.app.entity.ForestClientEntity;
-import ca.bc.gov.app.repository.ClientDoingBusinessAsRepository;
+import ca.bc.gov.app.exception.MissingReportFileException;
 import ca.bc.gov.app.repository.ForestClientRepository;
 import ca.bc.gov.app.util.SheetWriter;
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
@@ -38,46 +37,92 @@ import reactor.core.publisher.Mono;
 public class ReportingClientService {
 
   private final ForestClientRepository forestClientRepository;
-  private final ClientDoingBusinessAsRepository clientDoingBusinessAsRepository;
   private final WebClient orgBookApi;
 
   public ReportingClientService(ForestClientRepository forestClientRepository,
-                                ClientDoingBusinessAsRepository clientDoingBusinessAsRepository,
-                                @Qualifier("orgBookApi") WebClient orgBookApi) {
+                                @Qualifier("orgBookApi") WebClient orgBookApi
+  ) {
     this.forestClientRepository = forestClientRepository;
-    this.clientDoingBusinessAsRepository = clientDoingBusinessAsRepository;
     this.orgBookApi = orgBookApi;
   }
 
-  public Mono<File> generateDoingBusinessAsReport() {
+  /**
+   * Returns a {@link Mono} of {@link File} representing the report file for the given report ID.
+   *
+   * @param reportId the report ID for which to retrieve the report file
+   * @return a {@link Mono} of {@link File} representing the report file for the given report ID
+   * @throws MissingReportFileException if the report file does not exist for the given report ID
+   */
+  public Mono<File> getReportFile(String reportId) {
 
-    return
-        generateReport(
-            clientDoingBusinessAsRepository
-                //As we are streaming through the data with Flux, we will not have the entire
-                //dataset in memory at any given time
-                .findAll()
-                //for each entry, we will grab the data from orgbook
-                .flatMap(this::mapToPublicView)
-        );
+    File sheetFile = getReportPath(reportId)
+        .normalize()
+        .toFile();
+
+    if (!sheetFile.exists()) {
+      return Mono.error(new MissingReportFileException(reportId));
+    }
+
+    return Mono.just(sheetFile);
   }
 
-  public Mono<File> generateAllClientsReport() {
-    return
-        generateReport(
-            forestClientRepository
-                //As we are streaming through the data with Flux, we will not have the entire
-                //dataset in memory at any given time
-                .findAll()
-                //for each entry, we will grab the data from orgbook
-                .flatMap(this::mapToPublicView)
-        );
+  /**
+   * Returns a {@link Flux} of {@link String} containing the names of reports in the report folder,
+   * with the ".xlsx" extension removed.
+   *
+   * @return a {@link Flux} of {@link String} containing the names of reports in the report folder
+   */
+  public Flux<String> listReports() {
+    try {
+      return Flux
+          .fromStream(Files.list(getReportFolder()))
+          .map(Path::getFileName)
+          .map(Path::toFile)
+          .map(File::getName)
+          .map(name -> name.replace(".xlsx", StringUtils.EMPTY));
+    } catch (IOException exception) {
+      log.error("Error while cleaning temp folder", exception);
+      return Flux.empty();
+    }
   }
 
-  @Scheduled(fixedDelay = 5, timeUnit = TimeUnit.MINUTES)
+  public Mono<Void> removeReport(String id) {
+    return getReportFile(id)
+        .doOnNext(this::deleteReportFile)
+        .then();
+  }
+
+
+  @Scheduled(cron = "0 0 0 ? * MON-FRI")
+  public void generateAllClientsReport() {
+    generateReport(
+        forestClientRepository
+            //As we are streaming through the data with Flux, we will not have the entire
+            //dataset in memory at any given time
+            .findAll()
+            //for each entry, we will grab the data from orgbook
+            .flatMap(this::mapToPublicView)
+    )
+        .blockOptional()
+        .ifPresent(reportFile -> log.info("Generated report {} now", reportFile));
+  }
+
+  @Scheduled(fixedDelay = 1, timeUnit = TimeUnit.HOURS)
   @SuppressWarnings({"java:S3864", "java:S4042"})
   public void cleanOldReports() {
 
+    try (Stream<Path> paths = Files.list(getReportFolder())) {
+      paths
+          .peek(file -> log.info("Found report on folder with name {}", file.getFileName()))
+          .filter(file -> isFileOlderThan(file.toFile(), 48))
+          .peek(file -> log.info("Report {} is older than 48 hours, removing it", file.getFileName()))
+          .forEach(path -> path.toFile().delete());
+    } catch (IOException exception) {
+      log.error("Error while cleaning temp folder", exception);
+    }
+  }
+
+  private Path getReportFolder() {
     Path sheetFolder = Paths
         .get("./temp/")
         .normalize();
@@ -89,43 +134,34 @@ public class ReportingClientService {
           sheetFolder.toFile().mkdirs()
       );
     }
-
-    try (Stream<Path> paths = Files.list(sheetFolder)) {
-      paths
-          .peek(file -> log.info("Found report on folder with name {}", file.getFileName()))
-          .filter(file -> isFileOlderThan(file.toFile(), 5))
-          .forEach(path -> path.toFile().delete());
-    } catch (IOException exception) {
-      log.error("Error while cleaning temp folder", exception);
-    }
-
-
+    return sheetFolder;
   }
 
-  private boolean isFileOlderThan(File file, int minutesDiff) {
+  private Path getReportPath(String reportId) {
+    return getReportFolder().resolve(reportId + ".xlsx");
+  }
+
+  @SuppressWarnings("java:S4042")
+  private void deleteReportFile(File file){
+    if(file.exists())
+      log.info("File {} deleted {}",file,file.delete());
+  }
+
+  private boolean isFileOlderThan(File file, int hoursDiff) {
     return
         Duration
             .between(
                 Instant.ofEpochMilli(file.lastModified()),
                 Instant.now()
             )
-            .toMinutes() > minutesDiff;
+            .toHours() > hoursDiff;
   }
 
   private Mono<File> generateReport(Flux<ClientPublicViewDto> values) {
 
-    File sheetFile = Paths
-        .get("./temp/", UUID.randomUUID().toString() + ".xlsx")
+    File sheetFile = getReportPath(UUID.randomUUID().toString())
         .normalize()
         .toFile();
-
-    if (!sheetFile.getParentFile().exists()) {
-      log.info(
-          "Temporary folder for reports {} does not exist, creating {}",
-          sheetFile.getParentFile().getAbsolutePath(),
-          sheetFile.getParentFile().mkdirs()
-      );
-    }
 
     SheetWriter writer = new SheetWriter(sheetFile);
 
@@ -147,14 +183,6 @@ public class ReportingClientService {
             StringUtils.defaultString(entity.getRegistryCompanyTypeCode()),
             StringUtils.defaultString(entity.getCorpRegnNmbr())
         )
-    );
-  }
-
-  private Mono<ClientPublicViewDto> mapToPublicView(ClientDoingBusinessAsEntity entity) {
-    return loadValueFromOrgbook(
-        entity.getDoingBusinessAsName(),
-        entity.getClientNumber(),
-        StringUtils.EMPTY
     );
   }
 
@@ -207,6 +235,9 @@ public class ReportingClientService {
             .exchangeToMono(
                 clientResponse -> clientResponse.bodyToMono(OrgBookTopicListResponse.class)
             )
+            .onErrorReturn(
+                new OrgBookTopicListResponse(0, 0, 0, new ArrayList<>())
+            )
             .filter(response -> !CollectionUtils.isEmpty(response.results()))
             .flatMapIterable(OrgBookTopicListResponse::results)
             .doOnNext(
@@ -217,11 +248,7 @@ public class ReportingClientService {
   }
 
   private static String encodeUri(String clientName) {
-    try {
-      return URLEncoder.encode(clientName, "utf-8");
-    } catch (UnsupportedEncodingException e) {
-      return clientName;
-    }
+    return URLEncoder.encode(clientName, StandardCharsets.UTF_8);
   }
 
 }
